# mahjax

./: .gitignore  .readthedocs.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  doc.yml  docs.yaml  tests.yml
api/: index.html
docs/: api.md  index.md  ui.md
examples/: README.md  bc.py  collect_offline_data.py  network.py  ppo_with_reg.py  requirements.txt
mahjax/: __init__.py  core.py
mahjax/_src/: visualizer.py
mahjax/_src/dwg/: mahjong_visualizer.py
mahjax/no_red_mahjong/: env.py  hand.py  meld.py  players.py  shanten.py  tile.py  yaku.py
mahjax/no_red_mahjong/cache/: hand_cache.npz  shanten_cache.npz  yaku_cache.npz
mahjax/ui/: app.py  game_manager.py
mahjax/ui/static/: app.js  index.html
mahjax/wrappers/: auto_reset_wrapper.py
rule/: index.html
search/: search_index.json
tests/no_red_mahjong/: test_special_case.py
ui/: index.html
