[project]
name = "mahjax"
description = "GPU-accelerated vectorized mahjong simulators for reinforcement learning"
dynamic = ["version"]
readme = "README.md"

[tool.setuptools.dynamic]
version = { attr = "mahjax.__version__" }

[tool.black]
line-length = 120

[flake8]
max-line-length = 120
max-complexity = 18

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
